fix input alignment

--- a/src/App.css
+++ b/src/App.css
@@ -162,7 +162,7 @@ select{
   border-style: none;
   border-radius: var(--smallCornerSize);
   padding: var(--defaultPadding);
-  min-width: 512px;
+  min-width: 528px;
 }
 
 
